--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,7 @@
       <main>
         <h1>My Second Heading</h1>
         <p>My Second paragraph.</p>
-        <table border="1">
+        <table>
             <caption>Calories Comparison of Popular Burgers</caption>
             <thead>
               <tr>
