--- a/page4.html
+++ b/page4.html
@@ -30,12 +30,12 @@
         <h1>My Fourth Heading</h1>
         <p>My Fourth paragraph.</p>
         <ul id="album">
-          <li id="photo"><img src="images/winterland1.jpg"></li>
+          <!-- <li id="photo"><img src="images/winterland1.jpg"></li>
           <li id="photo"><img src="images/winterland2.jpg"></li>
           <li id="photo"><img src="images/winterland3.jpg"></li>
           <li id="photo"><img src="images/winterland4.jpg"></li>
           <li id="photo"><img src="images/winterland5.jpg"></li>
-          <li id="photo"><img src="images/winterland6.jpg"></li>
+          <li id="photo"><img src="images/winterland6.jpg"></li> -->
       </ul>
       </main>
       <!-- End Main Content -->
@@ -43,6 +43,26 @@
       <!-- Footer Information -->
       <footer>&copy; Copyright 2020</footer>
     </div>
+    <script>
+      var photos = []; // Declare an empty array to store image elements
+      var fileNames = []; // Declare an empty array to store image file names
+      var imageList = []; // Declare an empty array to store HTML list that contains images
+      var image; // Declare an empty variable to store the assembled image list codes
+      var openList = "<li id='photo'>"; // Declare a variable to contain the open list tag
+      var closeList = "</li>"; // Declare a variable to contain the close list tag
+  
+      // Create a loop to create 6 images starting with an index of 0
+      for (var i = 0; i < 6; i++) {
+          fileNames.push("winterland" + (i + 1)); // Create image file names
+          photos.push("<img src='images/" + fileNames[i] + ".jpg'>"); // Store image HTML element
+          image = openList + photos[i] + closeList; // Assemble image with list tags
+          imageList.push(image); // Store (push) the assembled list
+      }
+  
+      // Display all six image codes stored in the array
+      document.getElementById("album").innerHTML = imageList.join('');
+  </script>
+  
     <!-- End Container -->
   </body>
 </html>
